<resources>

    <string name="jbxx">基本信息</string>
    <string name="dzbl">电子病历</string>
    <string name="yzgl">医嘱管理</string>
    <string name="hlxx">护理信息</string>
    <string name="jybg">检验报告</string>
    <string name="mzjl">麻醉记录</string>
    <string name="jcbg">检查报告</string>
    <string name="blbg">病理报告</string>

    <string name="hzbw">患者备忘</string>

    <string name="fxdb">分析&#38;对比</string>


    <string name="qx">权限:</string>
    <string name="hyqy">欢迎,全院</string>
    <string name="tz">通知</string>
    <string name="bqhz">病区患者</string>
    <string name="qt">其他</string>
    <string name="bqgk">病区概况</string>
    <string name="yhxx">用户信息</string>
    <string name="gb">关闭</string>
    <string name="ysz">医生站</string>
    <string name="bjrmdxyy">北京人民大学医院</string>
    <string name="sspb">手术排班</string>
    <string name="sz">设置</string>
    <string name="cwgl">床位管理</string>
    <string name="ydcf">移动查房</string>
    <string name="hzgl">会诊管理</string>
    <string name="app_name">北京大学人民医院移动医生站</string>
    <string name="user_name">用户名：</string>
    <string name="password">密 码：</string>
    <string name="input_usernum">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登&#160;&#160;录</string>
    <string name="mobile_doc_help">移动医生助手</string>
    <string name="patient_name">患者姓名</string>
    <string name="patient_bed_num">0055111</string>
    <string name="basic_info">基本信息</string>
    <string name="clinical_record">电子病例</string>
    <string name="order_management">医嘱管理</string>
    <string name="apply_form">申请单</string>
    <string name="care_info">体征信息</string>
    <string name="inspection_report">检验报告</string>
    <string name="examine_report">检查报告</string>
    <string name="patient_note">患者备忘</string>
    <string name="refresh">刷新</string>
    <string name="patient_basic_info">患者基本信息</string>
    <string name="last_sync">最后同步于</string>


    <string name="name">姓&#160;&#160;&#160;&#160;名:</string>
    <string name="gender">性&#160;&#160;&#160;&#160;别:</string>
    <string name="age">年&#160;&#160;&#160;&#160;龄:</string>
    <string name="hospital_num">住院号:</string>
    <string name="bed_num">病床号:</string>
    <string name="patient_num">患者号:</string>
    <string name="credit_num">证件号:</string>
    <string name="tel_num">电&#160;&#160;&#160;&#160;话:</string>
    <string name="dateApply">申请日期:</string>
    <string name="dateReport">报告日期:</string>
    <string name="sample">标本:</string>
    <string name="sequenceNo">序号</string>
    <string name="checkProject">检测项目</string>
    <string name="checkNo">检测值</string>
    <string name="referencekNo">参考值</string>
    <string name="reportResult">报告结果</string>
    <string name="device_info">设备\n信息</string>
    <string name="medicare_num">医保号:</string>
    <string name="pay_method">付款方式:</string>
    <string name="hospital_info">住院信息</string>
    <string name="cost_info">费用信息</string>
    <string name="diagnose_info">诊断信息</string>
    <string name="nation">民&#160;&#160;&#160;&#160;族:</string>
    <string name="occupation">职&#160;&#160;&#160;&#160;业:</string>
    <string name="marriage">婚&#160;&#160;&#160;&#160;姻:</string>
    <string name="address">地&#160;&#160;&#160;&#160;址:</string>
    <string name="contact_person">联系人:</string>
    <string name="inhospital_time">入院时间:</string>
    <string name="hospitalized_day">住院天数:</string>
    <string name="main_doctor">主治医生:</string>
    <string name="response_nurse">责任护士:</string>


    <string name="departments">科室:</string>
    <string name="condition">病情:</string>
    <string name="systemSetting">系统设置</string>
    <string name="mySchedule">我的日程</string>
    <string name="myPatient">我的患者</string>
    <string name="localRecord">本地病例库</string>
    <string name="orderAll">全部医嘱</string>
    <string name="orderLong">长期医嘱</string>
    <string name="orderShort">临时医嘱</string>

    <string name="orderMed">药品治疗</string>
    <string name="examineCheck">检验检查</string>
    <string name="surgeryAnesthesia">手术麻醉</string>
    <string name="orderFood">护理膳食</string>
    <string name="others">其它</string>
    <string name="time">时间</string>
    <string name="type">类型</string>
    <string name="value">值</string>
    <string name="byPingY">按拼音</string>
    <string name="byBedNo">按病床</string>
    <string name="patientList">患者列表</string>
    <string name="mobileCheck">移动查房</string>
    <string name="payment_type">缴费类型:</string>
    <string name="prepaid_expense">预交费用:</string>
    <string name="cost_expense">总费用:</string>
    <string name="pay_expense_all">总付款:</string>
    <string name="self_expense">自费金额:</string>
    <string name="balance">费用余额:</string>
    <string name="apply_num">申请单号</string>
    <string name="blood_type">血型</string>
    <string name="apply_time">申请时间</string>
    <string name="apply_doc">申请人</string>
    <string name="space_use_info">空间使用情况</string>
    <string name="pacs_image">PACS影像</string>
    <string name="case_history">病历</string>
    <string name="other_app">其它应用</string>
    <string name="last_space">剩余容量</string>
    <string name="diagnose_beforeSugery">术前诊断</string>
    <string name="ill_state">病情</string>
    <string name="surgery_time">手术时间</string>
    <string name="surgery_depart">手术室</string>
    <string name="surgery_room">手术间</string>
    <string name="not_choose">未选</string>
    <string name="separate_sign">隔离标志</string>
    <string name="surgery_bed_num">台次</string>
    <string name="surgery_level">手术等级</string>
    <string name="left">&lt;</string>
    <string name="right">&gt;</string>
    <string name="title_activity_system_config">SystemConfigSet</string>
    <string name="title_activity_patient_main">PatientMain</string>
    <string name="title_activity_clinical_record">ClinicalRecordActivity</string>
    <string name="title_activity_inspection_report">InspectionReportActivity</string>
    <string name="title_activity_examine_pacs">ExaminePacsActivity</string>
    <string name="title_activity_add_apply_record">AddApplyRecord</string>
    <string name="title_activity_examine_heart">ExamineHeartActivity</string>
    <string name="title_activity_care_info">CareInfoActivity</string>
    <string name="title_activity_blood_apply">BloodApplyActivity</string>
    <string name="anesthesia_record_count_text">共[%s]项麻醉记录</string>
</resources>
