<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_base_bg"
    android:orientation="horizontal"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lv_vertical_title_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/vertical_title_indicate_1_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/radio_one" />

                <TextView
                    android:id="@+id/vertical_title_indicate_1_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ydcf"
                    android:textColor="@drawable/text_selector"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lv_vertical_title_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/vertical_title_indicate_2_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/radio_two" />

                <TextView
                    android:id="@+id/vertical_title_indicate_2_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cwgl"
                    android:textColor="@drawable/text_selector"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lv_vertical_title_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/vertical_title_indicate_3_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/radio_three" />

                <TextView
                    android:id="@+id/vertical_title_indicate_3_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hzgl"
                    android:textColor="@drawable/text_selector"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
            android:id="@+id/lv_vertical_title_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
            android:id="@+id/vertical_title_indicate_5_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/radio_shoushu" />

            <TextView
            android:id="@+id/vertical_title_indicate_5_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sspb"
            android:textColor="@drawable/text_selector"
            android:textSize="12sp" />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/lv_vertical_title_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/vertical_title_indicate_4_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/radio_four" />

                <TextView
                    android:id="@+id/vertical_title_indicate_4_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sz"
                    android:textColor="@drawable/text_selector"
                    android:textSize="12sp" />


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"></LinearLayout>


            <LinearLayout
                android:id="@+id/lv_vertical_title_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/vertical_title_indicate_exit_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/radio_exit" />

                <TextView
                    android:id="@+id/vertical_title_indicate_exit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gb"
                    android:textColor="@drawable/text_selector"
                    android:textSize="12sp" />


            </LinearLayout>


        </LinearLayout>


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/border_color" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/main_menu_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></FrameLayout>


        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_general_main_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55000000"
        android:gravity="center"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/wait_backgroud"
            android:gravity="center">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:indeterminateDrawable="@drawable/progressbar_rotate_mode2" />

        </LinearLayout>
    </RelativeLayout>


</FrameLayout>
