<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.founder.ihospital_bdrm_doctor_station_offline.Activity.LoginActivity">


    <LinearLayout
        android:id="@+id/linearlayout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"></LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@mipmap/rmyy" />




                <TextView
                    style="@style/sp14Text"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:background="@color/titlecolor"
                    android:gravity="center"
                    android:text="@string/bjrmdxyy"
                    android:textColor="@color/colorWhite"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>






        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8">

        </View>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/icon_user" />

            <EditText
                android:id="@+id/etName_login"
                style="@style/sp16Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/input_usernum" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/icon_key" />


            <EditText
                android:id="@+id/etPwd_login"
                style="@style/sp16Text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:hint="@string/input_password" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/btn_login"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/login_button"
            android:text="离线登录"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55000000"
        android:gravity="center"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/wait_backgroud"
            android:gravity="center">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:indeterminateDrawable="@drawable/progressbar_rotate_mode2" />

        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>
